--- a/index.html
+++ b/index.html
@@ -24,27 +24,33 @@
       </header>
       <aside>
         <div class="rating-1">
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+          <div class="stars">
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+          </div>
           <p>Rated 5 Stars in Reviews</p>
         </div>
         <div class="rating-2">
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+          <div class="stars">
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+          </div>
           <p>Rated 5 Stars in Report Guru</p>
         </div>
         <div class="rating-3">
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
-          <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+          <div class="stars">
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+            <img src="images/icon-star.svg" alt="" aria-hidden="true" />
+          </div>
           <p>Rated 5 Stars in BestTech</p>
         </div>
       </aside>
